# speech-to-text-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  tokenizer.json  train.py
acoustic_encoder/: downsampler.py  full_encoder.py  transformer_with_attn.py
audio_preprocessing/: custom_tokenizer.py  dataset.py  fast_fourier_transformation.py  mel_spectrogram.py  test_steps.py
decoder/: decoder_transformer.py
training_data/: download_data.py  speech.json
